# MIMS

./: .gitignore  Makefile  mkdocs.yml  pyproject.toml
api/colony_service/: app.py  colony_dao.py  colony_service.py  models.py  requests.py  requirements.txt  resource_dao.py  rule_dao.py
api/immigration_service/: app.py  immigration_service.py  requirements.txt
api/passengers_service/: Dockerfile  app.py  db.py  models.py  passenger_dao.py  passenger_service.py  passengers_handler.py  requests.py  requirements.in  requirements.txt
demo/: app.py
demo/sample_data/: mock_data.json  passengers.json
demo/static/: index.html
docs/: 1_PreliminaryStudy.md  2_ArchitectureVision.md  3_BusinessArchitecture.md  4_InformationSystemsArchitecture.md  5_TechnologyArchitecture.md  6_OpportunitiesAndSolutions.md  7_MigrationAndPlanning.md  8_ImplementationGovernance.md  9_ArchitectureChangeManagement.md  Classes.md  CostEstimation.md  DataModel.md  Decisions.md  DeploymentArchitecture.md  HighLevelDesign_bak.md  MicroservicesDesign.md  Overview.md  ProjectStructure.md  requirements.txt
docs/diagrams/: DataModelChart.md  DataModelDetailed.md  InterServicesCommMatrix.md  PassengerRegistration.md  (+13 more)
frontend/: index.html
infra/: k8s-deployment.yaml  k8s-services.yaml
sample_data/: CyberoPassengers.json  colonies.json  colonies_rules.json  europa_rules.json  liberty_base_rules.json  mangalyan_rules.json  new_washington_rules.json  one_bulk.json  passengers_data.json  passengers_small_sample.json  response_1680434228198.json  rodina_rules.json  xintian_rules.json
(+13 files in other folders)
