[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demo"
version = "0.1.0"
description = "Demo for the Cybero's Mars Immigration System"
authors = [{name = "Martin Tomes", email = "jsem@martintomes.net"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
]

[project.optional-dependencies]
docs = ["mkdocs"]